# dev_quick_setup

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  config.json  config.rs  global_config.rs  main.rs  setup.rs
