[package]
name = "dev_quick_setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10.1"
config = "0.13.4"
regex = "1.4"
dirs-next = "2.0"
tempfile = "3.2"
colored = "2.0.0"
dialoguer = "0.11.0"
sys-info = "0.9.1"
indicatif = "0.17.7"
unreachable = "1.0.0"
time = "0.3.30"
rayon = "1.8.0"
dirs = "5.0.1"
matches = "0.1.10"
crossterm = "0.27.0"
url = "2.5.0"


